syntax = "proto3";

package model;

option java_package = "org.oppia.android.app.model";
option java_multiple_files = true;

// Corresponds to platform parameters that can be used to configure application behavior (including gating features).
message PlatformParameter {
  // Name of the parameter.
  string name = 1;
  // Value of the parameter.
  oneof value_type {
    // Indicates a boolean-typed platform parameter.
    bool boolean = 2;
    // Indicates a integer-typed platform parameter.
    int32 integer = 3;
    // Indicates a string-typed platform parameter.
    string string = 4;
  }
  // Indicates the sync status of the platform parameter.
  SyncStatus sync_status = 5;

  enum SyncStatus {
    // Indicates that the sync status isn't yet known.
    SYNC_STATUS_UNSPECIFIED = 0;

    // Indicates that the parameter isn't yet synced with the remote server.
    NOT_SYNCED_FROM_SERVER = 1;

    // Indicates the parameter's value has been synced with the remote server.
    SYNCED_FROM_SERVER = 2;
  }
}

// Format of platform parameters stored on disk. It closely resembles the JSON response in cache.
message RemotePlatformParameterDatabase {
  // Platform parameters cached from the backend.
  repeated PlatformParameter platform_parameter = 1;
}
